Add basic elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masterclass December</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    
 </head>
 <body>
     <header>
@@ -15,6 +16,20 @@
     </header>
     <main>
         <div>
+            <div></div>
+            <div>
+                <h6>SNEAKER COMPANY</h6>
+                <h2>Fall Limited Edition Sneakers</h2>
+                <p>These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they'll withstand everything the weather can offer.</p>
+                <p><scan> $125.00 </scan><scan> 50% </scan></p>
+                <p><scan> $250.00</scan></p>
+
+                <div>
+                    <p><scan> - </scan><scan> 0 </scan><scan> + </scan></p>
+                    <button>Add to cart</button>
+                </div>
+
+            </div>
             
         </div>
     </main>
