Add main product structure and images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Masterclass December</title>
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
     <header>
         <nav>
@@ -14,9 +16,26 @@
         </nav>
     </header>
     <main>
-        <div>
-            
+        <div id="product-group">
+            <div class="product">
+                <img class="main-product-image" src="assets/images/shoe.webp" alt="Poduct Image">
+                <div class="product-group">
+                    <img class="small-image" src="assets/" alt="dress">
+
+                </div>
+            </div>
+            <div class="product">
+                <p>Sneaker Company</p>
+                <h2>Fall Limited Edition Sneakers</h2>
+                <p>These low profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer
+                    sole, they will withstand everything the weather can offer</p>
+                <h3>$125.00</h3> <span>50%</span>
+                <p>$150.00</p>
+                <span>-</span> &nbsp;<span>0</span>&nbsp; <span>+</span>&nbsp; <button>Add to Cart</button>
+            </div>
+
         </div>
     </main>
 </body>
+
 </html>
