--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
         <nav>
-
+<header>SNEAKERS</header>
+<div>Collections</div>
         </nav>
     </header>
     <main>
