--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masterclass December</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
     
 </head>
 
@@ -14,7 +15,21 @@
     <header>
         <nav>
             <header>SNEAKERS</header>
-            <div>Collections</div>
+            <ul id="menu">
+                <li>
+                    <a href="#Collections" >Collections</a>
+                </li>
+                <li>
+                    <a href="#Men">Men</a>
+                </li>
+                <li>
+                    <a href="#Women">Women</a>
+                </li>
+                <li>
+                    <a href="#Contact" class="active">Home</a>
+                </li>
+            </ul>
+            
         </nav>
     </header>
     <main>
